main.css
html{
  font-size:15pt;
}

body{
  padding-bottom:5rem;
}

li{
  padding:.5rem;
}

main{
  display:block;
  margin:auto;
  font-family: Georgia,serif;
}

footer{
  margin:auto;
}

nav{
  list-style:none;
  text-align:center;
}

nav li{
  display:inline;
  padding-right:1rem;
}

.word-list{
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
}

.no-decor{
  list-style:none;
}

.narrow{
  max-width:400px;
}

.medium{
  max-width:600px;
}

p{
  font-size: 1rem;
  font-family:Arial,sans-serif;
}

h1{
  font-size:2.1rem;
  font-weight:bold;
  text-align:center;
}

h2{
  font-size:1.8rem;
  font-weight:bold;
  border-top:3px solid #333333;
  text-align:center;
}

h3{
  font-size:1.6rem;
  font-weight:bold;
  border-top:2px solid #666666;
  text-align:center;
}

h4{
  font-size:1.4rem
  font-weight:bold;
  border-top:1px solid #999999;
  text-align:left;
}

h5{
  font-size:1.2rem;
  font-weight:normal;
  border-top:.5px solid #AAAAAA;
  text-align:left;
}

.rose{
  background-color: #d4c9c9;
}

.medium-image {
  width:600px;
  padding:5px;
}

.narrow-image {
  display:block;
  max-width:400px;
  padding:5px;
}

.reallynarrow-image{
  display:block;
  max-width:250px;
  padding:5px;
}

.thenarrowest-image{
  display:block;
  max-width:120px;
  padding:0px;
}

.fullwidth-image{
  display:block;
  max-width:100%;
  width:100%;
}

.tinyfont{
  font-size:.6rem;
}
.smallfont{
   font-size:.85rem;
 }

.bigfont{
  font-size:1.2rem;
  font-weight: bold;
}
.quoted{
  margin: 10%;
  font-size:.9rem;
  font-family:Georgia;
  font-style:italic;
}

.lineup{
  display:inline-block;
}

.stacker{
  position:relative;
}

.overlaid{
  position:absolute;
}

.h-centered{
  text-align:center;
  margin:auto;
}

.left{
  right:auto;
  left:0;
}

.right{
  left;auto;
  right:0;
}

.top{
  bottom:auto;
  top:0;
}

.bottom{
  top:auto;
  bottom:0;
}

.v-centered{
  top:auto;
  bottom:auto;
}

.sign-language-small{
  max-width: 75px;
  display:inline-block;
}

